Se añade gitignore y link de fuentes

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papelapp</title>
+    <link href="https://fonts.cdnfonts.com/css/tt-rationalist-trl" rel="stylesheet">
 </head>
 <body>
     
-    
+
 
 </body>
 </html>
