Cambio de shopping cart

--- a/store.html
+++ b/store.html
@@ -8,7 +8,8 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <main class="store store__container">
+    <main>
+    <section class="store store__container">
         <h2 class="store__heading">Productos</h2>
 
         <div class="store__grid">
@@ -186,6 +187,7 @@
 
         </div><!--./productos__grid-->
 
+    </section>
     </main>
 </body>
 </html>
