Cambio valor total del shopping cart (se quita la tabla)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
 
                 <!-- Resumen carrito -->
                 <div class="cart__resume">
-                    <table>
+                    <h2>Resumen</h2>
+                    <h3>Valor Total</h3>
+                    <p class="total-value"></p>
+                    <button onclick="comprar()">Comprar</button>
+
+                    <!-- <table>
                         <thead>Resumen</thead>
                         <tr>
                             <th>Valor Total</th>
@@ -75,11 +80,11 @@
                         <tr>
                             <th class="total-value"></th>
                             <td></td>
-                            <!-- aqué el boton de comprar -->
+                           
                             <td><button onclick="comprar()">Comprar</button></td>
                         </tr>
                         <tbody></tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
              <!-- Boton cerrar carrito -->
@@ -351,6 +356,7 @@
             <img src="/img/logo.png" alt="logo" class="footerImg">
             <h2 class="footerTitle">Paper <span class="titleActive">App</span></h2>
         </div>
+        
         <div class="footerInfo">
             <div class="contact">
                 <h3 class="contactTitle">Contáctanos</h3>
