cambio final botones

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h2>Resumen</h2>
                     <h3>Valor Total</h3>
                     <p class="total-value"></p>
-                    <button onclick="comprar()">Comprar</button>
+                    <button class="cart-button" onclick="comprar()">Comprar</button>
 
                     <!-- <table>
                         <thead>Resumen</thead>
