Fix a link del navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <!-- Enalces de navegación -->
                 <ul class="links">
-                    <li class="link">
+                    <li class="link-item">
                         <a class="nav-link" href="#init">Inicio</a>
                     </li>
                     <!-- Links de la barra de navegación -->
