--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </div>
             </div>
              <!-- Boton cerrar carrito -->
+            <button id="cardButton-empty">Vaciar Carrito</button>
             <button id="cardButton-close">Cerrar</button>
         </div>
     </div>
